# SFW

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Callback.h  Connection.h  LoggerManager.h  Runnable.h  Serializer.h  Server.h  ServerConnectionHandler.h  Socket.h  SocketDescriptor.h  ThreadPool.h  utils.h
include/SFW/: Callback.h  Connection.h  Logger.h  LoggerManager.h  Serializer.h  Server.h  ServerConnectionHandler.h  Socket.h  SocketDescriptor.h  Task.h  ThreadPool.h  utils.h
include/SFW/platform/posix/: Socket.h  SocketDescriptor.h
include/SFW/platform/win32/: Socket.h  SocketDescriptor.h  WinSockInstance.hpp
src/: CMakeLists.txt  Connection.cpp  Logger.cpp  LoggerManager.cpp  Makefile  Server.cpp  ServerConnectionHandler.cpp  Socket.cpp  SocketDescriptor.cpp  ThreadPool.cpp  main.cpp  utils.cpp
src/platform/posix/: Socket.cpp  SocketDescriptor.cpp
src/platform/win32/: Socket.cpp  SocketDescriptor.cpp  WinSockInstance.cpp
tests/: CMakeLists.txt  TConnection.hpp  TSocket.hpp  python_utils.cpp  python_utils.hpp  test_main.cpp
tests/scripts/: TConnection.py  TSocket.py  hello.py
